--- a/index.html
+++ b/index.html
@@ -1,88 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chielo Chiamaka Sophia | Tech VA & Cloud Support</title>
-  <link rel="stylesheet" href="styles.css" />
-  <script defer src="script.js"></script>
+
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="https://dp3mzdbw10zuo.cloudfront.net/style.css" />
+  <script defer src="https://dp3mzdbw10zuo.cloudfront.net/script.js"></script>
+
+
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
 </head>
 
 <body>
+  <!-- ✅ Navbar -->
   <header class="navbar">
-    <nav>
-      <ul>
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="container nav-container">
+      <div class="logo">Smarter Scalable Systems</div>
+
+      <nav class="main-nav">
+        <ul class="nav-links">
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+
+      <a href="#contact" class="cta-button">Contact Me</a>
+    </div>
   </header>
 
+  <!-- Hero Section -->
   <section id="hero" class="hero">
-    <div class="hero-text">
-      <h1>Chielo Chiamaka Sophia</h1>
-      <h2>Tech Virtual Assistant | DevOps & Cloud Support | Linux Sys Admin</h2>
-      <p>I streamline operations and help businesses scale smarter through Cloud, DevOps, Linux, and rock-solid admin support.</p>
-      <a href="#contact" class="cta">Let's Talk</a>
-    </div>
-    <div class="hero-img">
-      <img src="your-image.jpg.webp" alt="Portrait of Chielo Chiamaka Sophia - Tech Virtual Assistant & Cloud Support Pro" />
+    <div class="hero-overlay">
+      <div class="hero-content reveal">
+        <img src="https://cdn-icons-png.flaticon.com/512/2721/2721269.png" alt="Tech Icon" class="profile-image" />
+        <h1>Chielo Chiamaka</h1>
+        <h2>Tech Virtual Assistant | DevOps & Cloud Support | Linux Sys Admin</h2>
+      </div>
     </div>
   </section>
 
-  <section id="about" class="section">
-    <h2>About Me</h2>
-    <p>I help businesses scale smarter by blending hands-on Cloud, DevOps, and Linux SysAdmin skills with reliable virtual admin support. Automating workflows to keeping systems running smoothly, I bring the tech and structure that keep things moving; fast, smart, and efficiently.</p>
-  </section>
-
-  <section id="services" class="section">
-    <h2>Services</h2>
-    <ul>
-      <li><strong>Virtual Executive Assistance:</strong> Admin, operations, research, communication, lead generation, content strategy & writing</li>
-      <li><strong>Linux System Administration:</strong> Maintenance, shell scripting, and automation</li>
-      <li><strong>Cloud & DevOps Support:</strong> CI/CD pipeline setup, GitHub Actions, AWS infrastructure, Terraform, Docker, Kubernetes basics, monitoring with CloudWatch/Prometheus, IAM, VPC, firewall setup</li>
-      <li><strong>Documentation:</strong> SOPs, project write-ups, user guides</li>
-    </ul>
-  </section>
-
-  <section id="projects" class="section">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Deploying a Full-Stack Online Banking App on AWS</h3>
-      <p>Designed, deployed and automated the infrastructure of a full-stack banking app using AWS, Terraform, Kubernetes, Docker, ArgoCD, and GitHub Actions.</p>
-      <p><strong>Tools:</strong> AWS, Namecheap, Terraform, GitHub Actions, Docker, ArgoCD, Kubernetes</p>
-      <a href="https://www.notion.so/Deploying-a-Full-Stack-Online-Banking-App-on-AWS-2275c34afc9080f796b7d93b06093b66?source=copy_link" target="_blank">View Documentation</a>
-    </div>
-    <div class="project">
-      <h3>Setting up a Dockerized GitHub Runner on AWS EC2</h3>
-      <p>Designed and deployed a CI/CD pipeline using GitHub Actions, reducing deployment time by 70%.</p>
-      <p><strong>Tools:</strong> GitHub Actions, AWS EC2, Bash, Docker</p>
-      <a href="https://www.linkedin.com/pulse/how-set-up-dockerized-github-runner-aws-ec2-chiamaka-chielo-gnjbf" target="_blank">View Article</a>
-    </div>
-    <div class="project">
-      <h3>AWS & Terraform Integration: IAM Setup, AWS CLI</h3>
-      <p>Setup AWS provider in Terraform, IAM user configuration, and AWS CLI setup to interact with AWS services.</p>
-      <p><strong>Tools:</strong> Terraform, AWS CLI, IAM</p>
-      <a href="https://www.linkedin.com/pulse/aws-terraform-integration-iam-setup-cli-installation-chiamaka-chielo-eo6hf" target="_blank">Read More</a>
+  <!-- About Section -->
+  <section id="about" class="section reveal">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>I help businesses scale smarter by blending hands-on Cloud, DevOps, and Linux SysAdmin skills with reliable virtual admin support. Automating workflows to keeping systems running smoothly, I bring the tech and structure that keep things moving; fast, smart, and efficiently.</p>
     </div>
   </section>
 
-  <section id="contact" class="section">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:Chielosophia@gmail.com">Chielosophia@gmail.com</a></p>
-    <ul>
-      <li><a href="https://www.linkedin.com/in/chiamaka-chielo" target="_blank">LinkedIn</a></li>
-      <li><a href="https://github.com/ChieloChi" target="_blank">GitHub</a></li>
-      <li><a href="https://x.com/chielo_chiamaka?t=YaDrfr67QCotNdzCqskYVg&s=09" target="_blank">Twitter</a></li>
-      <li><a href="https://dev.to/chielo_chiamaka" target="_blank">Dev.to</a></li>
-    </ul>
+  <!-- Services Section -->
+  <section id="services" class="section reveal">
+    <div class="container">
+      <h2>Services</h2>
+      <ul>
+        <li><strong>Virtual Executive Assistance:</strong> Admin, operations, research, communication, lead generation, content strategy & writing</li>
+        <li><strong>Linux System Administration:</strong> Maintenance, shell scripting, and automation</li>
+        <li><strong>Cloud & DevOps Support:</strong> CI/CD pipeline setup, GitHub Actions, AWS infrastructure, Terraform, Docker, Kubernetes basics, monitoring with CloudWatch/Datadog</li>
+        <li><strong>Documentation:</strong> SOPs, project write-ups, user guides</li>
+      </ul>
+    </div>
   </section>
 
+  <!-- Projects Section -->
+  <section id="projects" class="section reveal">
+    <div class="container">
+      <h2>Projects</h2>
+
+      <div class="project">
+        <h3>Deploying a Full-Stack Online Banking App on AWS</h3>
+        <p>Designed, deployed and automated the infrastructure of a full-stack banking app using AWS, Terraform, Kubernetes, Docker, ArgoCD, and GitHub Actions.</p>
+        <p><strong>Tools:</strong> AWS, Namecheap, Terraform, GitHub Actions, Docker, ArgoCD, Kubernetes</p>
+        <a href="https://www.notion.so/Deploying-a-Full-Stack-Online-Banking-App-on-AWS-2275c34afc9080f796b7d93b06093b66?source=copy_link" target="_blank">View Documentation</a>
+      </div>
+
+      <div class="project">
+        <h3>Setting up a Dockerized GitHub Runner on AWS EC2</h3>
+        <p>Designed and deployed a CI/CD pipeline using GitHub Actions, reducing deployment time by 70%.</p>
+        <p><strong>Tools:</strong> GitHub Actions, AWS EC2, Bash, Docker</p>
+        <a href="https://www.linkedin.com/pulse/how-set-up-dockerized-github-runner-aws-ec2-chiamaka-chielo-gnjbf" target="_blank">View Article</a>
+      </div>
+
+      <div class="project">
+        <h3>AWS & Terraform Integration: IAM Setup, AWS CLI</h3>
+        <p>Setup AWS provider in Terraform, IAM user configuration, and AWS CLI setup to interact with AWS services.</p>
+        <p><strong>Tools:</strong> Terraform, AWS CLI, IAM</p>
+        <a href="https://www.linkedin.com/pulse/aws-terraform-integration-iam-setup-cli-installation-chiamaka-chielo-eo6hf" target="_blank">Read More</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="section reveal">
+    <div class="container">
+      <h2>Contact Me</h2>
+      <p>Email: <a href="mailto:Chielosophia@gmail.com">Chielosophia@gmail.com</a></p>
+
+      <ul class="social-links">
+        <li>
+          <a href="https://www.linkedin.com/in/chiamaka-chielo" target="_blank" class="social-link">
+            <i class="fab fa-linkedin"></i> LinkedIn
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/ChieloChi" target="_blank" class="social-link">
+            <i class="fab fa-github"></i> GitHub
+          </a>
+        </li>
+        <li>
+          <a href="https://x.com/chielo_chiamaka?t=YaDrfr67QCotNdzCqskYVg&s=09" target="_blank" class="social-link">
+            <i class="fab fa-x-twitter"></i> Twitter
+          </a>
+        </li>
+        <li>
+          <a href="https://dev.to/chielo_chiamaka" target="_blank" class="social-link">
+            <i class="fab fa-dev"></i> Dev.to
+          </a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/@YourChannelName" target="_blank" class="social-link">
+            <i class="fab fa-youtube"></i> YouTube
+          </a>
+        </li>
+      </ul>
+    </div>
+  </section>
 </body>
-
 </html>
-
