Add CI/CD workflow with Terraform, deploy, rollback

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chielo Chiamaka Sophia | Tech VA & Cloud Support</title>
+  <title>Chielo Chiamaka Sophia | DevOps & Cloud Support</title>
 
   <!-- Stylesheet -->
   <link rel="stylesheet" href="https://dp3mzdbw10zuo.cloudfront.net/style.css" />
@@ -41,9 +41,9 @@
   <section id="hero" class="hero">
     <div class="hero-overlay">
       <div class="hero-content reveal">
-        <img src="https://cdn-icons-png.flaticon.com/512/2721/2721269.png" alt="Tech Icon" class="profile-image" />
+        <img src="https://cdn-icons-png.flaticon.com/512/2721/2721269.png" alt="ssstech Image" class="profile-image" />
         <h1>Chielo Chiamaka</h1>
-        <h2>Tech Virtual Assistant | DevOps & Cloud Support | Linux Sys Admin</h2>
+        <h2>DevOps & Cloud Support</h2>
       </div>
     </div>
   </section>
@@ -52,7 +52,7 @@
   <section id="about" class="section reveal">
     <div class="container">
       <h2>About Me</h2>
-      <p>I help businesses scale smarter by blending hands-on Cloud, DevOps, and Linux SysAdmin skills with reliable virtual admin support. Automating workflows to keeping systems running smoothly, I bring the tech and structure that keep things moving; fast, smart, and efficiently.</p>
+      <p>At SSSTech, our goal is simple: build Smarter, Scalable Systems that help businesses grow without breaking. We combine DevOps practices and cloud expertise to streamline delivery, secure infrastructure, and ensure your systems scale as your business does.</p>
     </div>
   </section>
 
@@ -61,9 +61,12 @@
     <div class="container">
       <h2>Services</h2>
       <ul>
-        <li><strong>Virtual Executive Assistance:</strong> Admin, operations, research, communication, lead generation, content strategy & writing</li>
-        <li><strong>Linux System Administration:</strong> Maintenance, shell scripting, and automation</li>
-        <li><strong>Cloud & DevOps Support:</strong> CI/CD pipeline setup, GitHub Actions, AWS infrastructure, Terraform, Docker, Kubernetes basics, monitoring with CloudWatch/Datadog</li>
+        <li><strong>AWS Infrastructure:</strong>  Designing and managing secure, scalable environments.</li>
+        <li><strong>CI/CD Pipeline Setup:</strong>Automating builds, tests, and deployments with GitHub Actions, Octopus Deploy, Argocd, GitLab CI, or Jenkins.</li>
+        <li><strong>Infrastructure as Code (Terraform):</strong>Consistent, repeatable infrastructure deployments.</li>
+        <li><strong>Docker & Kubernetes:</strong>Containerization and orchestration for modern applications.</li>
+        <li><strong>Monitoring & Alerts:</strong> Proactive system health checks with tools like Prometheus, Grafana, and CloudWatch.</li>
+        <li><strong>DevOps & Cloud Support:</strong> CI/CD pipeline setup, GitHub Actions, AWS infrastructure, Terraform, Docker, Kubernete, monitoring</li>
         <li><strong>Documentation:</strong> SOPs, project write-ups, user guides</li>
       </ul>
     </div>
