Update website content

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chielo Chiamaka Sophia | DevOps & Cloud Support</title>
+  <title>Chielo Chiamaka Sophia | DevOps & Cloud Engineer</title>
 
   <!-- Stylesheet -->
   <link rel="stylesheet" href="https://dp3mzdbw10zuo.cloudfront.net/style.css" />
@@ -42,8 +42,8 @@
     <div class="hero-overlay">
       <div class="hero-content reveal">
         <img src="https://cdn-icons-png.flaticon.com/512/2721/2721269.png" alt="ssstech Image" class="profile-image" />
-        <h1>Chielo Chiamaka</h1>
-        <h2>DevOps & Cloud Support</h2>
+        <h1>DevOps & Cloud Engineer</h1>
+        <h2>Chielo Chiamaka</h2>
       </div>
     </div>
   </section>
@@ -62,11 +62,10 @@
       <h2>Services</h2>
       <ul>
         <li><strong>AWS Infrastructure:</strong>  Designing and managing secure, scalable environments.</li>
-        <li><strong>CI/CD Pipeline Setup:</strong>Automating builds, tests, and deployments with GitHub Actions, Octopus Deploy, Argocd, GitLab CI, or Jenkins.</li>
+        <li><strong>CI/CD Pipeline Setup:</strong>Automating builds, tests, and deployments with GitHub Actions, Octopus Deploy, Argocd.</li>
         <li><strong>Infrastructure as Code (Terraform):</strong>Consistent, repeatable infrastructure deployments.</li>
         <li><strong>Docker & Kubernetes:</strong>Containerization and orchestration for modern applications.</li>
-        <li><strong>Monitoring & Alerts:</strong> Proactive system health checks with tools like Prometheus, Grafana, and CloudWatch.</li>
-        <li><strong>DevOps & Cloud Support:</strong> CI/CD pipeline setup, GitHub Actions, AWS infrastructure, Terraform, Docker, Kubernete, monitoring</li>
+        <li><strong>Monitoring & Alerts:</strong> Proactive system health checks with tools like Prometheus, Grafana, Datadog and CloudWatch.</li>
         <li><strong>Documentation:</strong> SOPs, project write-ups, user guides</li>
       </ul>
     </div>
